clarin-angular/src/css/clarin-material.scss
/* Used by all splitters: */
// https://github.com/angular-split/angular-split/issues/224
.as-split-gutter {
  height: revert !important;
}

.matero-content {
  padding: 0;
  height: calc(100% - 64px - 16px); // Minus the toolbar & 16px padding
  width: 100%;
}

/* Dialogs */
.select-document-modal {
  //width:  700px;
  //height: 600px;
}

.select-document-modal .collections-tree {
  width: 600px;
  height: 400px;
  overflow: auto;
}

.select-document-modal .collections-tree .selected-node {
  @extend .mat-primary;
  text-decoration: underline !important;
}

.select-document-modal .annotation-schema {
  width: 600px;
  height: 400px;
  overflow: hidden;
}
.select-document-modal .annotation-schema-row {
  width: 100%;
  height: 100%;
  overflow: auto;
}
.select-document-modal .annotation-schema-options {
  width: 200px;
  overflow: auto;
}
.select-document-modal .annotation-schema-values {
  width: 360px;
  height: 260px;
  overflow: auto;
}

/* Login screen */
.login-card {
  max-width: 400px;
}
.tool-header-avatar-image {
  background-image: url("/assets/images/logo.svg");
  background-size: cover;
}

/* Annotation Toolbar */
.annotation-toolbar {
  padding: 0px;
  //margin: -16px -16px 16px;
  font-size: 13px;
  line-height: 20px;
  height: 46px;
  mat-form-field {
    //transform: scale(0.80);
    width: 200px;
    .mat-form-field-wrapper {
      padding: 0;
      .mat-form-field-flex {
        padding: 0px 4px 0px 4px;
        .mat-form-field-infix {
          padding: 0px 0px 4px 0px;
        }
      }
    }
  }
  mat-divider {
    height: 24px;
    margin: 6px;
  }
  .mat-icon-button {
    height: 24px;
    width: 24px;
    line-height: 24px;
  }

  .mat-stroked-button {
    height: 24px;
    //width: 24px;
    line-height: 24px;
    font-size: 12px;
    padding: 0px 4px;
    mat-icon {
      height: 18px;
      width: 18px;
      font-size: 18px;
      line-height: 18px;
    }
  }

  mat-button-toggle, .mat-button-toggle-label-content {
    height: 24px;
    line-height: 24px;
    font-size: 12px;
    padding: 0px 4px;
  }

  .overlapping-areas-select {
    width: 100%;
  }

  .mat-delete {
    background-color: white;
    color: red;
  }
  .mat-save {
    background-color: white;
    color: green;
  }
  .mat-autosave {
    background-color: white;
    color: blue;
  }
  .mat-change {
    background-color: white;
    color: orange;
  }
}

/* Document Annotation Area */
.annotation-area {
  height: 100%;
  margin: -16px;
  width: calc(100% + 16px + 16px); // Add margin to width

  .main-content {
    height: calc(100% - 46px - 46px); // Minus the two toolbars;
    overflow-x: auto;
    overflow-y: auto;
  }
  .main-content-document {
    /* Position the editor overlay on top of the editor */
    /* From: https://stackoverflow.com/questions/2941189/how-to-overlay-one-div-over-another-div
     * If we had bootstrap 4, we could have used this:
     * https://stackoverflow.com/questions/60620315/put-div-above-another-div-in-bootstrap */
    text-widget {
      //height: 100%;
      //width: 100%;
      //display: block;
      //box-sizing: border-box;
      .annotation-editor-text-widget-container {
        height: 100%;
        width: 100%;
        position: relative;
        #annotation-editor-text-widget,
        #annotation-editor-text-widget-overlay {
          display: block;
          width: 100%;
          height: 100%;
          position: absolute;
          top: 0;
          left: 0;
          pointer-events: none; /* auto=visiblePainted */
          z-index: 10;
        }
      }
    }
  }
  .side-content {
    height: 100%;
    .side-content-header-container {
      @extend .text-center;
      width: 100%;
      .side-content-header {
        mat-button-toggle, .mat-button-toggle-label-content {
          height: 24px;
          line-height: 24px;
          font-size: 12px;
          padding: 0px 4px;
        }
      }
    }
    .side-content-container {
      overflow: auto;
      height: calc(100% - 46px); // Minus one toolbar
    }
  }
}

/* CodeMirror */
.CodeMirror {
  height: auto;
  line-height: 1em;
  font-size: 1em;
  position: relative;
  overflow: hidden;
  //border: 1px solid #eee;
  //height: 100% !important;
}
.CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
  background-color: transparent; /* The little square between H and V scrollbars */
}

/* Annotation Visualiser */
.annotation-visualiser {
  overflow: auto;
  width: 100%;
  height: 100%;
  .annotation-visualiser-container {
    width: 100%;
    .mat-header-row {
      height: 33px;
      .mat-header-cell {
        text-align: center;
        font-weight: bold;
        font-size: 13px;
        line-height: 13px;
      }
    }
  }
}
.overflow-ellipsis{
  white-space:nowrap!important;
  overflow: hidden!important;
  text-overflow: ellipsis!important;
}

